hphp/hack/test/ifc/check/early_return.php.exp
File "early_return.php", line 17, characters 1-119:
Data with policy SECRET appears in context PUBLIC. (Typing[4379])
